syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink/core/capabilities/remote/executable/request";
package request;

message TransmissionsScheduledEvent {
  string timestamp = 1;
  string scheduleType = 2;
  string workflowExecutionID = 3;
  string transmissionID = 4;
  string capabilityID = 5;
  string stepRef = 6;
  // Map of peerID to transmission delay in milliseconds
  map<string, int64> peerTransmissionDelays = 7;
}
